--- a/docker-stack+YAML.yml
+++ b/docker-stack+YAML.yml
@@ -15,6 +15,13 @@ services:
 
   db:
     image: postgres:9.4
+    secrets:
+      -db_username
+      -db_password
+    environment:
+      POSTGRES_PASSWORD_FILE:  /run/secrets/db_password
+      POSTGRES_USER_FILE: /run/secrets/db_username
+      
     volumes:
       - db-data:/var/lib/postgresql/data
     networks:
@@ -83,6 +90,12 @@ services:
     deploy:
       placement:
         constraints: [node.role == manager]
+
+secrets:
+  db_username:
+    file: ./postgres_user.txt
+  db_password:
+    file: ./postgres_password.txt
 
 networks:
   frontend:
