--- a/pod-reader-rolebinding.yml
+++ b/pod-reader-rolebinding.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: development
 subjects:
 - kind: User
-  name: DevUser
+  name: devuser
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
